PathStorage refactor - extracted method getStream