@@ -11,9 +11,8 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import static java.nio.file.StandardOpenOption.CREATE_NEW;
 import static java.nio.file.StandardOpenOption.WRITE;
 
 public class PathStorage extends AbstractStorage<Path> {
@@ -42,21 +41,18 @@ public class PathStorage extends AbstractStorage<Path> {
 
     @Override
     protected List<Resume> doCopyAll() {
-        try {
-            return Files.list(directory).map(this::doGet).collect(Collectors.toList());
-        } catch (IOException e) {
-            throw new StorageException("directory read error", null);
-        }
+        return getStream().map(this::doGet).toList();
     }
 
     @Override
     protected void doSave(Resume resume) {
         Path path = getSearchKey(resume.getUuid());
         try {
-            doWrite(resume, Files.newOutputStream(path, CREATE_NEW));
+            Files.createFile(path);
         } catch (IOException e) {
             throw new StorageException("path write error" + path.toAbsolutePath(), path.getFileName().toString(), e);
         }
+        doUpdate(resume, path);
     }
 
     @Override
@@ -93,22 +89,22 @@ public class PathStorage extends AbstractStorage<Path> {
 
     @Override
     protected Path getSearchKey(String uuid) {
-        return Path.of(directory.toString(), uuid);
+        return directory.resolve(uuid);
     }
 
     @Override
     public void clear() {
-        try {
-            Files.list(directory).forEach(this::doDelete);
-        } catch (IOException e) {
-            throw new StorageException("path delete error", null);
-        }
+        getStream().forEach(this::doDelete);
     }
 
     @Override
     public int size() {
+        return getStream().toList().size();
+    }
+
+    private Stream<Path> getStream() {
         try {
-            return Files.list(directory).toList().size();
+            return Files.list(directory);
         } catch (IOException e) {
             throw new StorageException("directory read error", null);
         }
